# pychameleon

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/reference_moonpuck/aggregation/: labels.csv  meta.json
benchmarks/reference_moonpuck/smileface/: labels.csv  meta.json
benchmarks/reference_moonpuck/t4_8k/: labels.csv  meta.json
docs/documentation/: 01_wprowadzenie.md  02_algorytm.md  03_implementacja.md  04_instrukcja.md  04_struktury_danych.md  05_efektywnosc.md  05_zbiory_danych.md  06_plan_testow.md  06_wyniki.md  07_wnioski.md  07_zbiory_danych.md  08_bibliografia.md  README.md
docs/documentation/images/: architecture.mmd  data_flow.mmd
docs/presentation/: outline.md  presentation.pptx  wymagania.md
docs/presentation/images/: algorithm_phases.mmd
notebooks/: 00_demo.ipynb  01_jakosc_vs_baseline.ipynb  02_porownanie_z_moonpuck.ipynb  03_wrazliwosc_parametrow.ipynb  _helpers.py
scripts/: build_docs.sh  export_figures.py  fetch_karypis_datasets.py  run_experiments.py  run_hpo.py  run_reference_benchmarks.py  setup_reference.sh
src/pychameleon/: __init__.py  _datasets.py  _types.py  chameleon.py  graph.py  merger.py  metrics.py  partition.py
tests/: conftest.py  test_chameleon.py  test_graph.py  test_merger.py  test_metrics.py  test_partition.py  test_sklearn_api.py
tests/data/karypis/: aggregation-gt.csv  cluto-t4-8k.csv  cluto-t5-8k.csv  cluto-t7-10k.csv  cluto-t8-8k.csv
