[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pychameleon"
version = "0.1.0"
description = "CHAMELEON hierarchical clustering using dynamic modeling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Oliwier Szypczyn", email = "oliwier.szypczyn@tenvalleys.com" }]
keywords = [
    "clustering",
    "hierarchical-clustering",
    "data-mining",
    "unsupervised-learning",
    "chameleon",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pymetis>=2023.1",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
experiments = [
    "pandas>=2.0",
    "tqdm>=4.65",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/oszypczy/pychameleon"
Repository = "https://github.com/oszypczy/pychameleon"
Issues = "https://github.com/oszypczy/pychameleon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pychameleon"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pychameleon",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["external/"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
# Allow ML-standard uppercase X, Y, etc. (scikit-learn convention)
"src/**" = ["N803", "N806"]
"tests/**" = ["N802", "N803", "N806"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
exclude = ["external/", "build/", "dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pychameleon",
    "--cov-report=term-missing",
]
